--- a/condidat/package.json
+++ b/condidat/package.json
@@ -8,7 +8,9 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.7",
     "bootstrap": "^5.3.3",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.341.0",
+    "moment": "^2.30.1",
     "perfect-scrollbar": "^1.5.5",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.1",
