--- a/backend/package.json
+++ b/backend/package.json
@@ -16,10 +16,14 @@
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
     "express": "^4.18.2",
+    "install": "^0.13.0",
     "jsonwebtoken": "^9.0.2",
+    "moment": "^2.30.1",
     "mongoose": "^8.1.1",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.9",
-    "nodemon": "^3.1.0"
+    "nodemon": "^3.1.0",
+    "npm": "^10.7.0",
+    "uuid": "^9.0.1"
   }
 }
